# gitHUD

./: .envrc  .githudrc  .gitignore  .travis.yml  ;  CHANGELOG.md  HLint.hs  README.md  default.nix  flake.nix  gitHUD.cabal  githud.cabal  nixpkgs.nix  shell.nix  stack.yaml
.github/: FUNDING.yml
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/doc/gitHUD-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/flag-cache/: gitHUD-0.1.0.0-dc611fe2a1d085526a31a014f6de9e11  hGitRadar-0.1.0.0-bf30f8ff166d12ef020849f4ff3b0716  hGitRadar-0.1.0.0-d3aa43ce25701b85a3876d7044f8b92b
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/lib/x86_64-osx-ghc-7.10.2/gitHUD-0.1.0.0-9QTX0F9BF7B1JPoxvWfB8P/: GitHUD.dyn_hi
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/lib/x86_64-osx-ghc-7.10.2/hGitRadar-0.1.0.0-6mujW6QnrIG4IrDaC1ZZpG/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/lib/x86_64-osx-ghc-7.10.2/hGitRadar-0.1.0.0-Coe1kEoKJmCHiIZnwYE7kZ/: GitHUD.dyn_hi  GitHUD.hi  Lib.hi
.stack-work/install/x86_64-osx/lts-3.15/7.10.2/pkgdb/: gitHUD-0.1.0.0-fa43c6f37dda3c04da0f6c3733352bad.conf  hGitRadar-0.1.0.0-bf30f8ff166d12ef020849f4ff3b0716.conf  package.cache
app/githud/: Main.hs
bench/: bench.html
docs/: PROMPT_EXPLAINED.md
docs/auto-fetch/: daemon-logic.puml
githudd/: Main.hs
src/: GitHUD.hs
src/GitHUD/: Debug.hs  Parse.hs  Process.hs  Types.hs
src/GitHUD/Config/: Parse.hs  Types.hs
src/GitHUD/Daemon/: Network.hs  Runner.hs
src/GitHUD/Git/: Command.hs  Common.hs  Types.hs
src/GitHUD/Git/Parse/: Base.hs  Branch.hs  Count.hs  Status.hs
src/GitHUD/Parse/: Branch.hs  Count.hs  Status.hs
src/GitHUD/Terminal/: ANSI.hs  Base.hs  Prompt.hs  Types.hs
test/: Spec.hs
test/Test/GitHUD/Config/: Parse.hs
test/Test/GitHUD/Git/: Common.hs  Types.hs
test/Test/GitHUD/Git/Parse/: Branch.hs  Status.hs
test/Test/GitHUD/Parse/: Branch.hs  Status.hs
test/Test/GitHUD/Terminal/: Base.hs  Prompt.hs
