name:                gitHUD
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/gbataille/gitHUD#readme
license:             BSD3
license-file:        LICENSE
author:              Grégory Bataille
maintainer:          gbataille.dev@gmail.com
copyright:           Grégory Bataille 2015
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    GitHUD
  build-depends:      base >= 4.7 && < 5
                    , process
  default-language:   Haskell2010

executable gitHUD
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , gitHUD
  default-language:   Haskell2010

test-suite gitHUD-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , gitHUD
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/gbataille/gitHUD
