name:                gitHUD
version:             1.3.5
synopsis:            More efficient replacement to the great git-radar
description:         Please see README.md
homepage:            http://github.com/gbataille/gitHUD#readme
license:             BSD3
license-file:        LICENSE
author:              Grégory Bataille
maintainer:          gregory.bataille@gmail.com
copyright:           Grégory Bataille 2015-2016
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    GitHUD
                    , GitHUD.Config.Parse
                    , GitHUD.Config.Types
                    , GitHUD.Git.Types
                    , GitHUD.Git.Common
                    , GitHUD.Git.Command
                    , GitHUD.Git.Parse.Base
                    , GitHUD.Git.Parse.Status
                    , GitHUD.Git.Parse.Branch
                    , GitHUD.Git.Parse.Count
                    , GitHUD.Process
                    , GitHUD.Terminal.Base
                    , GitHUD.Terminal.Prompt
                    , GitHUD.Terminal.Types
                    , GitHUD.Types
  build-depends:      base >= 4.7 && < 5
                    , process
                    , parsec >= 3.1.9 && < 4
                    , mtl >= 2.2.1 && < 3
                    , text >= 1.2 && < 1.3
                    , unix >= 2.7 && < 3
  default-language:   Haskell2010

executable gitHUD
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-unused-do-bind
  build-depends:      base
                    , gitHUD
  default-language:   Haskell2010

test-suite gitHUD-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , tasty >= 0.10 && < 0.12
                    , tasty-hunit >= 0.9 && < 0.10
                    , tasty-smallcheck >= 0.8 && < 0.9
                    , tasty-quickcheck >= 0.8 && < 0.9
                    , parsec >= 3.1.9 && < 4
                    , mtl >= 2.2.1 && < 3
                    , gitHUD
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  Other-modules:      Test.GitHUD.Git.Parse.Status
                    , Test.GitHUD.Git.Parse.Branch
                    , Test.GitHUD.Git.Common
                    , Test.GitHUD.Git.Types
                    , Test.GitHUD.Terminal.Base
                    , Test.GitHUD.Terminal.Prompt
                    , Test.GitHUD.Config.Parse
  Ghc-Options:        -rtsopts -Wall -fno-warn-unused-do-bind -threaded

source-repository head
  type:     git
  location: https://github.com/gbataille/gitHUD
