cabal-version:       2.2
name:                githud
version:             3.0.0
synopsis:            More efficient replacement to the great git-radar
description:         Please see README.md (used to be gitHUD)
homepage:            http://github.com/gbataille/gitHUD#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Grégory Bataille
maintainer:          gregory.bataille@gmail.com
copyright:           Grégory Bataille 2015-2019
category:            Development
build-type:          Simple
-- extra-source-files:

library
  hs-source-dirs:     src
  exposed-modules:    GitHUD
                    , GitHUD.Config.Parse
                    , GitHUD.Config.Types
                    , GitHUD.Daemon.Network
                    , GitHUD.Daemon.Runner
                    , GitHUD.Git.Types
                    , GitHUD.Git.Common
                    , GitHUD.Git.Command
                    , GitHUD.Git.Parse.Base
                    , GitHUD.Git.Parse.Status
                    , GitHUD.Git.Parse.Branch
                    , GitHUD.Git.Parse.Count
                    , GitHUD.Process
                    , GitHUD.Terminal.Base
                    , GitHUD.Terminal.Prompt
                    , GitHUD.Terminal.Types
                    , GitHUD.Types
  build-depends:      base >= 4.11 && < 5
                    , bytestring >= 0.10 && < 0.11
                    , daemons >= 0.2.1 && < 0.3
                    , data-default >= 0.7 && < 0.8
                    , directory >= 1.3 && < 1.4
                    , process
                    , parsec >= 3.1.13 && < 4
                    , mtl >= 2.2.2 && < 3
                    , network >=  2.8 && < 3.0
                    , text >= 1.2 && < 1.3
                    , unix >= 2.7 && < 3
                    , utf8-string >= 1.0 && < 1.1
  default-language:   Haskell2010

executable githud
  hs-source-dirs:     app/githud
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:      base
                    , githud
  default-language:   Haskell2010

executable githudd
  hs-source-dirs:     app/githudd
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:      base
                      , githud
  default-language:   Haskell2010

test-suite githud-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , tasty >= 1.2 && < 1.3
                    , tasty-hunit >= 0.10 && < 0.11
                    , tasty-smallcheck >= 0.8 && < 0.9
                    , tasty-quickcheck >= 0.10 && < 0.11
                    , daemons >= 0.2.1 && < 0.3
                    , parsec >= 3.1.13 && < 4
                    , mtl >= 2.2.2 && < 3
                    , githud
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -fsimpl-tick-factor=120
  default-language:   Haskell2010
  Other-modules:      Test.GitHUD.Git.Parse.Status
                    , Test.GitHUD.Git.Parse.Branch
                    , Test.GitHUD.Git.Common
                    , Test.GitHUD.Git.Types
                    , Test.GitHUD.Terminal.Base
                    , Test.GitHUD.Terminal.Prompt
                    , Test.GitHUD.Config.Parse

source-repository head
  type:     git
  location: https://github.com/gbataille/gitHUD
